Start work on attempts
